# Projeto-PIIGuardian

./: .gitignore  README.md  api.py  detector.py  main.py  pyproject.toml  requirements.txt
Acesso à Informação/PIIGuardian_Entrega_documentação/: LEIA-ME_ENTREGA.txt  README.md
Acesso à Informação/PIIGuardian_Entrega_documentação/Codigo_Fonte/: LICENSE
Acesso à Informação/PIIGuardian_Entrega_documentação/Codigo_Fonte/src/: detector.py  validators.py
Acesso à Informação/PIIGuardian_Entrega_documentação/Codigo_Fonte/tests/: test_detector.py  test_validators.py
Acesso à Informação/PIIGuardian_Entrega_documentação/Documentacao/: DOCUMENTACAO_IA_Item_13.9.md  MANUAL_INSTALACAO_EXECUCAO.md  RELATORIO_FALSOS_NEGATIVOS.md  RELATORIO_TECNICO_SOLUCAO.md
Acesso à Informação/PIIGuardian_Entrega_documentação/Exemplos_de_Teste/: README_EXEMPLOS.txt
data/: sample_pedidos.json  synthetic_generator.py
notebooks/: 01_analise_dados.ipynb  02_avaliacao_detector.ipynb
scripts/: __init__.py  batch_process.py  evaluate.py  train_model.py
src/: __init__.py  patterns.py  utils.py
tests/: __init__.py
